Fixed layout issues on dashboard.

--- a/styles/users.css
+++ b/styles/users.css
@@ -30,26 +30,29 @@ body {
   #footer ul {
     margin-bottom: 1.5em;
     padding: 0;
-    bottom: 0;
+    top: 15em;
     margin: 0em 1em 0em 1em;
     max-width: 100%;
-    position: sticky;
+    position: absolute;
     list-style-type: none;
   }
 
   ul li {
-    padding: 0.8em 3em 0.8em 3em;
+    padding: 0.5em 3em 0.5em 3em;
     font-size: 18px;
-    border-radius: 10px;
-    list-style-type: none;
   }
 
-  ul li:hover {
-    background-color: #9595c5;
-    color: white;
-    cursor: pointer;
-    box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.108), 0 5px 10px 0 rgba(0, 0, 0, 0.076);
+  ul li a {
+    color: black;
+    text-decoration: none;
+    margin: 0;
   }
+
+  ul li a:hover {
+    color: #9595c5;
+    text-decoration: none;
+  }
+
 
   #logo {
     grid-row: 1 / span 1;
@@ -128,6 +131,7 @@ body {
     border-radius: 10px;
     font-size: 20px;
     font-family: 'Inter', sans-serif;
+    font-weight: bold;
   }
 
   #add {
@@ -192,9 +196,29 @@ body {
     grid-row: 3 / span 2;
     grid-column: 2 / span 1;
     margin: 0em 2em 2em 2em;
+    padding: 0 4em 0 4em;
     background-color: white;
     border-radius: 0 0 25px 25px;
+    overflow-y: scroll;
   }
+
+  #content h3 {
+    font-size: 25px;
+    margin-bottom: 8px;
+  }
+
+  table,
+  th,
+  td {
+    border-collapse: collapse;
+    padding: 2px 2.5em;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+    line-height: 2.5em;
+    font-size: 16px;
+  }
+
   #bottomMenu {
     grid-row: 3 / span 1;
     grid-column: 1 / span 1;
@@ -202,12 +226,12 @@ body {
   }
 
   #bottomMenu ul {
-    margin-bottom: 1.5em;
     padding: 0;
     margin: 0em 1em 0em 1em;
     max-width: 100%;
-    position: sticky;
+    position: absolute;
     list-style-type: none;
+    bottom: 4em;
   }
 
   .material-symbols-outlined {
@@ -296,6 +320,23 @@ body {
     grid-row: 5 / span 1;
     margin: 0em 1em 0em 1em;
     margin-bottom: 0;
+    overflow-y: scroll;
+  }
+
+  #content h3 {
+    font-size: 18px;
+  }
+
+  table,
+  th,
+  td {
+    border-collapse: collapse;
+    padding: 2px 2px;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+    line-height: 2.5em;
+    font-size: 12px;
   }
 
   #bottomMenu {
@@ -331,7 +372,7 @@ body {
     color: black;
     background: #e4e4e4;
     font-family: 'Inter', sans-serif;
-    font-size: 18px;
+    font-size: 14px;
   }
 
   .textInput {
@@ -364,7 +405,8 @@ body {
     background-color: #909090;
     border-radius: 10px;
     display: inline-block;
-    font-size: 18px;
+    font-size: 16px;
+    font-weight: bold;
   }
 
   #add {
@@ -378,7 +420,7 @@ body {
     background-color: #9595c5;
     border-radius: 10px;
     display: inline-block;
-    font-size: 18px;
+    font-size: 16px;
     font-weight: bold;
   }
 
@@ -392,7 +434,7 @@ body {
     color: black;
     background: #e4e4e4;
     font-family: 'Inter', sans-serif;
-    font-size: 18px;
+    font-size: 14px;
   }
 
   #delete {
@@ -408,7 +450,7 @@ body {
     background-color: #9595c5;
     border-radius: 10px;
     display: inline-block;
-    font-size: 18px;
+    font-size: 16px;
     font-weight: bold;
     margin: 0.5em 0em 0.5em 0em;
   }
